# dotfiles

./: .bash_function  .bash_profile  .bashrc  .codex  .gitconfig  .gitignore  .gitmodules  .gvimrc  .inputrc  .pre-commit-config.yaml  .profile  .pythonrc.py  .shrc  .tmux.conf  .userContent.css  .vimperatorrc  .vimrc  .xmodmaprc  .xpdfrc  AGENTS.md  CLAUDE.md  README  README.md  opencode.json  opencode.jsonc
.agents/: AGENTS.md
.agents/skills/: .gitignore
.claude/: CLAUDE.md  settings.json
.codex/: AGENTS.md
.codex/prompts/: plan.md
.config/: .gitignore  nvim  pylintrc
.config/aqua/: aqua.yaml
.config/cargo/: tools.txt
.config/claude/: CLAUDE.md  settings.json
.config/codex/: .gitignore  AGENTS.md
.config/devbox/: devbox.json
.config/fish/: .gitignore  AGENTS.md  config.fish
.config/git/: config
.config/greasemonkey/: fatsecret.redirect-absolute-url.user.js  fatsecret.searchbar-fixer.user.js  fatsecret.user.js  mealpal.user.js
.config/ipython/: pudb_shell.py
.config/lazybeads/: config.yml
.config/lazygit/: .gitignore  config.yml
.config/litecli/: config
.config/navi/: AGENTS.md  config.yaml  file-conversion.cheat  git.cheat  my.cheat
.config/npm/: .gitignore  package-lock.json  package.json
.config/nvim/: .gitignore  AGENTS.md  coc-settings.json  init.lua  init.vim  lazy-lock.json
.config/omf/: .gitignore  bundle  init.fish
.config/opencode/: .gitignore  AGENTS.md  opencode.json  opencode.jsonc
.config/pay-respects/: .gitignore  config.toml
.config/powerline/: config.json  custom.py
.config/pudb/: .gitignore  monokai.py  pudb.cfg
.config/ripgrep/: rc
.config/taskwarrior/: taskrc
.config/thefuck/: settings.py
.config/tridactyl/: .gitignore  tridactylrc
.config/venv-update/: pyproject.toml  requirements-bootstrap.txt  requirements-dev-minimal.txt  requirements-dev.txt  requirements-minimal.txt  requirements.txt  venv-update
.config/vit/: config.ini
.config/yamllint/: config
.github/workflows/: README.md  bundle-skills.yml
.opencode/: .gitignore
.vim/: .gitignore  init.vim
(+170 files in other folders)
