[tool.poetry]
name = "venv-update"
version = "0.1.0"
description = ""
authors = ["John Nguyen <ipwnponies@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ipython = "^8.4.0"
mycli = "^1.25.0"
thefuck = "^3.32"
visidata = "^2.9.1"
vit = "^2.2.0"
yamllint = "^1.27.1"
ptpython = "^3.0.20"
pyright = "^1.1.264"
termdown = "^1.18.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.0"
neovim = "^0.3.1"
powerline-status = "^2.7"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
