[tool.poetry]
name = "venv-update"
version = "0.1.0"
description = ""
authors = ["John Nguyen <ipwnponies@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
ipython = "^8.4.0"
mycli = "^1.25.0"
thefuck = "^3.32"
visidata = "^2.9.1"
vit = "^2.2.0"
yamllint = "^1.27.1"
ptpython = "^3.0.20"
pyright = "^1.1.264"
termdown = "^1.18.0"
ruff = "^0.11.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.0"
powerline-status = "^2.7"
pre-commit = "^2.20.0"
pendulum = "^3.0.0"
addict = "^2.4.0"
rich = "^14.0.0"
pip-tools = "^7.4.1"
pynvim = "^0.5.2"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
