[tool.poetry]
name = "venv-update"
version = "0.1.0"
description = ""
authors = ["John Nguyen <ipwnponies@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
ipython = "^9.1.0"
thefuck = "^3.32"
visidata = "^3.1.1"
vit = "^2.3.3"
yamllint = "^1.37.0"
ptpython = "^3.0.29"
termdown = "^1.18.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
powerline-status = "^2.7"
pre-commit = "^4.2.0"
pendulum = "^3.0.0"
addict = "^2.4.0"
rich = "^14.0.0"
pynvim = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
